<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_no_connection"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_no_internet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_internet_connection"
        android:textAlignment="center"
        android:layout_marginTop="28dp"
        android:textSize="17sp"
        android:fontFamily="sans-serif-medium"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@+id/image" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_try_again"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/try_again_text"
        android:layout_marginTop="6dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textSize="13sp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/tv_no_internet" />
    
    <com.google.android.material.button.MaterialButton
        android:id="@+id/open_settings"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:text="@string/retry"
        android:textAllCaps="false"
        app:backgroundTint="?attr/colorSecondaryVariant"
        app:cornerRadius="5dp"
        android:textColor="#fff"
        android:textSize="15sp"
        android:layout_marginTop="15dp"
        android:paddingStart="22dp"
        android:paddingEnd="22dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.15"
        app:layout_constraintTop_toBottomOf="@id/tv_try_again"
        app:layout_constraintBottom_toBottomOf="parent"  />

</androidx.constraintlayout.widget.ConstraintLayout>